[package]
name = "actix-chat"
version = "0.1.0"
authors = ["Raphael Santo Domingo <raphael.santodomingo@target.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rand = "0.3"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-signal = "0.2"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.8.3"
